-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 290902) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][devT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.4 *-

??102002 (v2.1dev12)
	- edi-entries: edi-24, edi-28, edi-29
	- added: edi-24; resample audio object added
	- added: edi-29; initial version of ecamonitor
	- added: edi-28; eiam-command 'int-output-mode-wellformed'
	- changed: ALSA support requires alsa-lib version 
		   0.9rc4 or newer
	- changed: libecasoundc versioning back to normal libtool 
		   style; interface version reverted back to 1:0:0
	- fixed: unnecessary warnings when closing OSS 
	         audio objects
	- fixed: unnecessary warnings when adding audio 
		 objects to a chainsetup with no chains
	         currently selected
	- fixed: resample, reverse and typeselect audio objects
		 types were broken in 2.1dev11
22082002 (v2.1dev11)
	- added: configure-check for socket libraries
	- added: -evp - volume peak watcher operator
	- added: initial support for LADSPA v1.1 API for plugin 
		 parameter defaults (as used in swh-0.2.8 plugin 
		 set); updated ladspa.h included in the source tree
	- changed: rewrite of all user-interface code that's
		   in the ecasound-x.y.z/ecasound directory
	- changed: added chainop and controller parameter 
		   descriptions back to ecasound's command-line 
		   help (--help/-h)